Some GameTests are now implemented with Mockito for more precise tests on custom minefields